@@ -1,5 +1,8 @@
 <?php
 /**
+ * This script verify that database usernames are actually valid.
+ * An existing usernames can become invalid if User::isValidUserName()
+ * is altered or if we change the $wgMaxNameChars
  * @file
  * @ingroup Maintenance
  */
