@@ -1,5 +1,8 @@
 <?php
 /**
+ * This script remove all statistics tracking from memcached
+ * for ALL wiki !
+ * 
  * @file
  * @ingroup Maintenance
  */
