@@ -1,5 +1,7 @@
 <?php
 /**
+ * This script report the hostname of a slave server.
+ *
  * @file
  * @ingroup Maintenance
  */
