@@ -2,6 +2,8 @@
 /**
  * Based on runJobs.php
  *
+ * Report number of jobs currently waiting in master database.
+ *
  * @file
  * @ingroup Maintenance
  * @author Tim Starling
