@@ -1,6 +1,6 @@
 <?php
 /**
- * Undelete a page
+ * Undelete a page by fetching it from the archive table
  *
  * @file
  * @ingroup Maintenance
