@@ -440,6 +440,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14845) Bug in prefs javascript: Calling an array item without checking
   its existance.
 * Accesskeys for minor edit/watch checkboxes on edit now work in Firefox 3
+* (bug 12384) Comments in maintenance/*php
 
 === API changes in 1.13 ===
 
